# spiral

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: Specification.md
include/spiral/: header.hpp  spiral.hpp
include/spiral/binarybuf/: exceptions.hpp  memorybuf.hpp
include/spiral/detail/: binarybuf_reader.hpp  code.hpp  export.hpp  function.hpp  import.hpp  instruction.hpp  int128.hpp  primitives.hpp  record.hpp  sharedrecord.hpp  typedefs.hpp  typeid.hpp  untagged_union.hpp
src/: main.cpp  spiral.cpp
